[project]
name = "boss"
version = "0.0.1"
authors = [
  { name="Mo Official", email="muminhassouna123@gmail.com" },
]
description = "Boss package for Ballsdex"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
